--- a/love/index.html
+++ b/love/index.html
@@ -37,7 +37,7 @@
                   郝欣欢小公主，我们认识已经
                   <span class="color" id="time"></span
                   >，这是许愿箱，你每周都可以在这里许一个愿望。
-                  <a href="./list.html">查看更多详情</a>
+                  <a style="text-decoration:underline" href="./list.html">查看更多细节</a>
                 </div>
               </div>
             </div>
