--- a/image.html
+++ b/image.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <h1>测试图片 width:1002;height:600</h1>
-    <img style="width:1002;height:600" src="" alt="" srcset="">
+    <h1>test img width:1002;height:600</h1>
+    <img style="width:1002px;height:600px" src="http://file.liangtongzhuo.com/99c49147aa073ea07953/%E7%B3%BB%E7%BB%9F%E7%94%A8%E5%9B%BE4-02-02.jpg" alt="" srcset="">
 </body>
 
 </html>
