--- a/list.html
+++ b/list.html
@@ -23,7 +23,7 @@
     <div class="layout">
         <!-- head -->
         <header>
-            <h1 id='title'>梁同桌的博客</h1>
+            <h1 id='title' style="display: flex"><img style="width: 115px;height: 70px;" src="http://file.liangtongzhuo.com/f821c009212a6dd54254/48540923dd54564e339f275ebfde9c82d0584fdb.png"> 梁同桌的博客</h1>
             <a class="sub-title" href="./atricle.html?5b5bef999f5454003502b539">About me</a>
             <a class="sub-title" href="./projects.html">I have done projects</a>
         </header>
