--- a/tp/index.html
+++ b/tp/index.html
@@ -28,7 +28,8 @@
     <div class="bg">
         <button type="button" class="picture">生成图片</button>
         <div class="need">
-            <img class="bg-img" src="http://file.liangtongzhuo.com/094ed1fe7bd2dc758828.jpeg/background.jpeg">
+            <!-- <img class="bg-img" src="http://file.liangtongzhuo.com/094ed1fe7bd2dc758828.jpeg/background.jpeg"> -->
+            <img class="bg-img" src="./background.jpeg">
         </div>
     </div>
 </body>
