--- a/tp/index.html
+++ b/tp/index.html
@@ -7,6 +7,14 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>实现HTML转图片</title>
+
+
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js" type="text/javascript" charset="utf-8" async
+        defer></script>
+    <script src="canvas2image.js" type="text/javascript" charset="utf-8" async defer></script>
+
+
     <style type="text/css" media="screen">
         .need {
             /* background: linear-gradient(#3793b6, #c993d3); */
@@ -15,22 +23,39 @@
         img {
             width: 100%;
         }
+
+        .button-list {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            text-align: right;
+        }
+
+        button {
+            width: 70px;
+            height: 70px;
+            border-radius: 50%;
+            background-color: #272c5a;
+            line-height: 20px;
+            text-align: center;
+            font-size: 15px;
+            font-weight: 200px;
+            cursor: pointer;
+            border: 0px;
+            color: white;
+        }
     </style>
-
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js" type="text/javascript" charset="utf-8" async
-        defer></script>
-    <script src="canvas2image.js" type="text/javascript" charset="utf-8" async defer></script>
-
 </head>
 
 <body style="padding: 0;margin: 0;">
     <div class="bg">
-        <button type="button" class="picture">生成图片</button>
+
         <div class="need">
-            <!-- <img class="bg-img" src="http://file.liangtongzhuo.com/094ed1fe7bd2dc758828.jpeg/background.jpeg"> -->
-            <img class="bg-img" src="./background.jpeg">
+            <img class="bg-img" src="http://file.liangtongzhuo.com/094ed1fe7bd2dc758828.jpeg/background.jpeg">
+            <!-- <img class="bg-img" src="./background.jpeg"> -->
         </div>
+
+        <div class="button-list"><button type="button" class="picture">生成<br/>图片</button></div>
     </div>
 </body>
 
@@ -56,12 +81,14 @@
     $('.picture').click(function (e) {
         // 调用html2canvas插件
         html2canvas(document.querySelector('.need'), { useCORS: true }).then(function (canvas) {
+            const w = $('.bg-img').width()
+            const h = $('.bg-img').height()
             // 这里的判断用于区分移动端和pc端
             if (getOS() == "Others") {
                 // 调用Canvas2Image插件
-                Canvas2Image.saveAsImage(canvas, $('.bg-img').width(), $('.bg-img').height(), 'png', 'DNF');
+                Canvas2Image.saveAsImage(canvas, w, h, 'png', 'DNF');
             } else {
-                const img = Canvas2Image.convertToImage(canvas, canvasWidth, canvasHeight);
+                const img = Canvas2Image.convertToImage(canvas, w*2, h*2);
                 // 渲染图片，并且加到页面中查看效果
                 $(".need").after(img);
             }
