up load banckgroud

--- a/tp/index.html
+++ b/tp/index.html
@@ -60,8 +60,8 @@
     <div class="bg">
         <div class="need">
             <p>你好我好大家好</p>
-            <!-- <img class="bg-img" src="http://file.liangtongzhuo.com/094ed1fe7bd2dc758828.jpeg/background.jpeg"> -->
-            <img class="bg-img" src="./background.jpeg">
+            <img class="bg-img" src="http://file.liangtongzhuo.com/094ed1fe7bd2dc758828.jpeg/background.jpeg">
+            <!-- <img class="bg-img" src="./background.jpeg"> -->
         </div>
         <div class="button-list"><button type="button" class="picture">生成<br />图片</button></div>
     </div>
