--- a/tp/index.html
+++ b/tp/index.html
@@ -9,8 +9,8 @@
     <title>大普罗理想生活</title>
 
 
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="./jquery-3.1.1.min.js"></script>
+    <script src="./html2canvas.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="canvas2image.js" type="text/javascript" charset="utf-8"></script>
 
 
