--- a/tp/index.html
+++ b/tp/index.html
@@ -13,6 +13,8 @@
     <script src="./html2canvas.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="./canvas2image.js" type="text/javascript" charset="utf-8"></script>
 
+    <script src="https://cdn.bootcss.com/vConsole/3.3.4/vconsole.min.js"></script>
+
 
     <style type="text/css" media="screen">
         .need {
@@ -106,6 +108,7 @@
     });
 
 
+  var vConsole = new VConsole();
 </script>
 
 </html>
