--- a/tp/index.html
+++ b/tp/index.html
@@ -91,7 +91,8 @@
     $('.picture').click(function (e) {
         alert('点击了')
         // 调用html2canvas插件
-        html2canvas(document.querySelector('.need'), { useCORS: true }).then(function (canvas) {
+        console.log(html2canvas);
+        html2canvas(document.querySelector('.need')).then(function (canvas) {
             console.log(canvas);
             try {
                 const w = $('.bg-img').width()
