--- a/tp/index.html
+++ b/tp/index.html
@@ -90,6 +90,7 @@
     // 点击转成canvas，最后用于生成图片
     $('.picture').click(function (e) {
         alert('点击了')
+        console.log('点击了');
         // 调用html2canvas插件
         console.log(html2canvas);
         html2canvas(document.querySelector('.need')).then(function (canvas) {
