--- a/tp/index.html
+++ b/tp/index.html
@@ -95,7 +95,7 @@
         console.log(html2canvas);
 
         try {
-            html2canvas(document.querySelector('.need')).then(function (canvas) {
+            html2canvas(document.querySelector(".need")).then(function (canvas) {
             console.log(canvas);
             try {
                 const w = $('.bg-img').width()
