--- a/tp/index.html
+++ b/tp/index.html
@@ -86,8 +86,7 @@
         <div class="need">
             <div class="content">
                 <p> <span class="clinetNmae">_______</span> 您好：</p>
-                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;我是您的生活顾问 <span class="adviserName">_______</span>
-                    ，“大普罗理想生活七天乐第3季”特邀您的家人和朋友艺起过节。</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;我是您的生活顾问 <span class="adviserName">_______</span> ，“大普罗理想生活七天乐第3季”特邀您的家人和朋友艺起过节。</p>
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;十一假期我们准备了好看的艺术展，好玩的音乐节，还有网红兔来打卡；同时联合郑州艺术名家为孩子们特别呈现了一场美学启蒙的盛宴。
                 </p>
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;每天都有新花样，快来理想国过个不一样的十一假期吧！</p>
@@ -122,8 +121,8 @@
     $('.picture').click(function (e) {
 
         // 输入名字
-        const clinetNmae = prompt('请输入客户的名字');
-        const adviserName = prompt('请输入置业顾问名字');
+        const clinetNmae = prompt('大普罗理想生活','请输入客户的名字');
+        const adviserName = prompt('大普罗理想生活','请输入置业顾问名字');
         // 修改名字
         document.querySelector('.clinetNmae').innerHTML = clinetNmae
         document.querySelector('.adviserName').innerHTML = adviserName
