--- a/tp/index.html
+++ b/tp/index.html
@@ -93,9 +93,11 @@
             </div>
 
 
-            <div class="div-img"></div>
-            <img class="bg-img" src="./background.jpeg">
-            <!-- <img class="bg-img" src="http://file.liangtongzhuo.com/094ed1fe7bd2dc758828.jpeg/background.jpeg"> -->
+            <div class="div-img">
+
+            </div>
+            <!-- <img class="bg-img" src="./background.jpeg"> -->
+            <img class="bg-img" src="http://file.liangtongzhuo.com/094ed1fe7bd2dc758828.jpeg/background.jpeg">
         </div>
         <div class="button-list"><button type="button" class="picture">生成<br />海报</button></div>
     </div>
@@ -142,7 +144,8 @@
                 const img = Canvas2Image.convertToImage(canvas, w * 2, h * 2);
                 // 渲染图片，并且加到页面中查看效果
                 document.querySelector('.div-img').innerHTML = ''
-                $(".div-img").after(img);
+                $(".div-img").append(img);
+                console.log();
             }
             alert('温馨提示，长按保存至相册')
             // 隐藏图片
