--- a/tp/index.html
+++ b/tp/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=320,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <title>大普罗理想生活</title>
+    <title>理想之光·社区艺术节，畅玩邀请</title>
 
 
     <script src="./jquery-3.1.1.min.js"></script>
@@ -56,11 +56,11 @@
             top: 140px;
             width: 85%;
             margin-left: 7.5%;
-            background-color: #3f5294;
+            background-color: rgba(255,255,255,0.8);
             border-radius: 8px;
-            color: white;
+            color: black;
             min-height: 50px;
-            padding: 10px;
+            padding: 8px;
             box-sizing: border-box;
         }
 
@@ -68,8 +68,8 @@
             margin: 0;
             border: 0;
             padding: 0;
-            line-height: 24px;
-            font-size: 13px;
+            line-height: 22px;
+            font-size: 12px;
             font-weight: 500;
         }
 
@@ -84,11 +84,11 @@
         <div class="need">
             <div class="content">
                 <p> <span class="clinetNmae">_______</span> 您好：</p>
-                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;我是您的生活顾问 <span class="adviserName">_______</span>，“大普罗理想生活七天乐第3季”特邀您的家人和朋友艺起过节。</p>
-                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;十一假期我们准备了好看的艺术展，好玩的音乐节，还有网红兔来打卡；同时联合郑州艺术名家为孩子们特别呈现了一场美学启蒙的盛宴。
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;我是您的生活顾问 <span class="adviserName">_______</span>，这个十一，邀请您同您的家人一起，来理想国和艺术家们一起玩转社区节日。</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;好玩的艺术展，好听的草坪音乐会，好吃的美食集；同时联合郑州艺术名家为孩子们特别呈现了一场美学启蒙的盛宴。
                 </p>
-                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;每天都有新花样，快来理想国过个不一样的十一假期吧！</p>
-                <p style="text-align: right;">2020年9月11日</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;每天都有新花样，来理想国过个不一样的十一假期吧！</p>
+                <p style="text-align: right;">2020年9月15日</p>
             </div>
 
 
