--- a/tp/index.html
+++ b/tp/index.html
@@ -95,7 +95,7 @@
             <div class="div-img">
 
             </div>
-            <img class="bg-img" src="./background.jpeg">
+            <img class="bg-img" src="./background.jpg">
             <!-- <img class="bg-img" src="http://file.liangtongzhuo.com/094ed1fe7bd2dc758828.jpeg/background.jpeg"> -->
         </div>
         <div class="button-list"><button type="button" class="picture">生成<br />海报</button></div>
