--- a/list.html
+++ b/list.html
@@ -25,7 +25,7 @@
         <header>
             <h1 id='title' >梁同桌的博客</h1>
             <a class="sub-title" href="./atricle.html?5b5bef999f5454003502b539">About me</a>
-            <a class="sub-title" href="./projects.html">I have done projects</a>
+            <!-- <a class="sub-title" href="./projects.html">I have done projects</a> -->
         </header>
         <!-- /head -->
         <!-- content -->
