--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a href="https://www.zhihu.com/people/liangtongzhuo/activities">知乎专栏</a> /
         <a href="http://weibo.com/tongrenyinsheng">微博</a>
          <br />
-        <a target="_blank" href="https://beian.miit.gov.cn/">备案号：豫ICP备16015486号</a>
+        <a href="https://beian.miit.gov.cn/">备案号：豫ICP备16015486号</a>
     </div>
     <script src="js/particles.min.js"></script>
     <script src="js/index.js"></script>
