--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-title" content="梁同桌的博客">
+<!--     <meta name="apple-mobile-web-app-title" content="梁同桌的博客"> -->
+    <meta name="apple-mobile-web-app-title" content="梁同桌">
     <meta name="description" content="大三创业拿到投资创办 ASMR 失败的程序员,有志改变世界,想成为 cool 的人,想让人生精彩一些而努力 ing ">
-    <meta name="keywords" content="梁同桌,梁同桌的博客,ltz,vscode-china,vscode,liangtongzhuo,tongrenyinsheng">
-    <title>梁同桌的博客</title>
+<!--     <meta name="keywords" content="梁同桌,梁同桌的博客,ltz,vscode-china,vscode,liangtongzhuo,tongrenyinsheng"> -->
+    <meta name="keywords" content="梁同桌,ltz,vscode-china,vscode,liangtongzhuo,tongrenyinsheng">
+    <title>梁同桌</title>
+<!--     <title>梁同桌的博客</title> -->
     <link href="css/index.css" rel="stylesheet">
     <link rel="apple-touch-icon-precomposed" href="./icon.png">
     <link rel="shortcut icon" href="./icon.png">
@@ -18,8 +21,12 @@
 <body>
     <div class="description">
         大三创业拿到投资创办 ASMR 失败的程序员,有志改变世界,想成为 cool 的人,想让人生精彩一些而努力 ing .
-        梁同桌,梁同桌的博客,ltz,vscode-china,vscode,liangtongzhuo,tongrenyinsheng
+        梁同桌,ltz,vscode-china,vscode,liangtongzhuo,tongrenyinsheng
     </div>
+<!--     <div class="description">
+        大三创业拿到投资创办 ASMR 失败的程序员,有志改变世界,想成为 cool 的人,想让人生精彩一些而努力 ing .
+        梁同桌,梁同桌的博客,ltz,vscode-china,vscode,liangtongzhuo,tongrenyinsheng
+    </div> -->
     <div id="particles-js"></div>
 
     <div class="content" id="content">
@@ -30,11 +37,11 @@
         <br />
         <br />
         <a href="./index.html">梁同桌的首页</a> /
-        <a href="https://github.com/liangtongzhuo">GitHub基地</a> /
-        <a href="http://www.jianshu.com/u/b9e84b0af9c5">简书日常技术</a> /
-        <a href="http://space.bilibili.com/3591966/">bilibili空间</a> /
-        <a href="https://www.zhihu.com/people/liangtongzhuo/activities">知乎专栏</a> /
-        <a href="http://weibo.com/tongrenyinsheng">微博</a>
+<!--         <a href="https://github.com/liangtongzhuo">GitHub基地</a> / -->
+<!--         <a href="http://www.jianshu.com/u/b9e84b0af9c5">简书日常技术</a> / -->
+<!--         <a href="http://space.bilibili.com/3591966/">bilibili空间</a> / -->
+<!--         <a href="https://www.zhihu.com/people/liangtongzhuo/activities">知乎专栏</a> / -->
+<!--         <a href="http://weibo.com/tongrenyinsheng">微博</a> -->
          <br />
         <a href="https://beian.miit.gov.cn/">备案号：豫ICP备16015486号</a>
     </div>
