--- a/list.html
+++ b/list.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
-<!--     <meta name="apple-mobile-web-app-title" content="梁同桌的博客">
+    <meta name="apple-mobile-web-app-title" content="梁同桌的博客">
     <meta name="description" content="大三创业拿到投资创办 ASMR 失败的程序员,有志改变世界,想成为 cool 的人,想让人生精彩一些而努力 ing ">
     <meta name="keywords" content="梁同桌,梁同桌的博客,ltz,vscode-china,vscode,liangtongzhuo,tongrenyinsheng">
-    <title>梁同桌的博客</title> -->
+    <title>梁同桌的博客</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/list.css">
     <link rel="apple-touch-icon-precomposed" href="./icon.png">
@@ -23,8 +23,7 @@
     <div class="layout">
         <!-- head -->
         <header>
-            <h1 id='title' >梁同桌</h1>
-<!--             <h1 id='title' >梁同桌的博客</h1> -->
+            <h1 id='title' >梁同桌的博客</h1>
             <a class="sub-title" href="./atricle.html?5b5bef999f5454003502b539">About me</a>
             <!-- <a class="sub-title" href="./projects.html">I have done projects</a> -->
         </header>
@@ -45,11 +44,11 @@
         <!-- footer -->
         <footer>
             <a style="text-decoration: none;" href="./index.html">梁同桌的首页</a> /
-<!--             <a style="text-decoration: none;" href="https://github.com/liangtongzhuo">GitHub基地</a> /
+            <a style="text-decoration: none;" href="https://github.com/liangtongzhuo">GitHub基地</a> /
             <a style="text-decoration: none;" href="http://www.jianshu.com/u/b9e84b0af9c5">简书日常技术</a> /
             <a style="text-decoration: none;" href="http://space.bilibili.com/3591966/">bilibili空间</a> /
             <a style="text-decoration: none;" href="https://www.zhihu.com/people/liangtongzhuo/activities">知乎专栏</a> /
-            <a style="text-decoration: none;" href="http://weibo.com/tongrenyinsheng">微博</a> -->
+            <a style="text-decoration: none;" href="http://weibo.com/tongrenyinsheng">微博</a>
         </footer>
         <!-- /footer -->
         <a style="text-decoration: none;" href="http://www.miitbeian.gov.cn/">备案号：豫ICP备16015486号</a>
