--- a/atricle.html
+++ b/atricle.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
-<!--     <meta name="apple-mobile-web-app-title" content="梁同桌的博客">
+    <meta name="apple-mobile-web-app-title" content="梁同桌的博客">
     <meta name="description" content="梁同桌的博客，在这里我会分享我个人心得，以及我在编程方面的知识，与大家共同成长。">
     <meta name="keywords" content="梁同桌,梁同桌的博客,ltz,vscode-china,vscode,liangtongzhuo,tongrenyinsheng">
-    <title>梁同桌的博客</title> -->
+    <title>梁同桌的博客</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/atricle.css">
     <!-- 代码高亮-->
@@ -41,11 +41,11 @@
         <!-- footer -->
         <footer>
             <a style="text-decoration: none;" href="./index.html">梁同桌的首页</a> /
-<!--             <a style="text-decoration: none;" href="https://github.com/liangtongzhuo">GitHub基地</a> /
+            <a style="text-decoration: none;" href="https://github.com/liangtongzhuo">GitHub基地</a> /
             <a style="text-decoration: none;" href="http://www.jianshu.com/u/b9e84b0af9c5">简书日常技术</a> /
             <a style="text-decoration: none;" href="http://space.bilibili.com/3591966/">bilibili空间</a> /
             <a style="text-decoration: none;" href="https://www.zhihu.com/people/liangtongzhuo/activities">知乎文章</a> /
-            <a style="text-decoration: none;" href="http://weibo.com/tongrenyinsheng">微博</a> -->
+            <a style="text-decoration: none;" href="http://weibo.com/tongrenyinsheng">微博</a>
         </footer>
         <!-- /footer -->
     </div>
